# aris

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
aris/: Cargo.toml
aris/src/: lib.rs  matrix.rs
aris/src/matrix/: complex.rs  mat.rs  mat_mut.rs  mat_ref.rs  ops.rs  test.rs
aris/tests/: arithmetic.rs  basic.rs  comparison.rs  complex.rs  constructors.rs  element_ops.rs  iterators.rs  properties.rs  views.rs
src/matrix/: complex.rs  mat.rs  ops.rs
tests/: aggregation.rs  arithmetic.rs  basic.rs  common.rs  comparison.rs  shape.rs
